# secondhandsongs

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  out.html  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst  requirements.txt
examples/: api.md  create_dataset.md
src/secondhandsongs/: __init__.py  api.py  dataset.py  download.py  models.py  skeleton.py
tests/: conftest.py  test_api.py  test_dataset.py  test_download.py
tools/: compose_shs_dataset.py
